Movied aliases into zshrc Updated Makefile Updated weechat for new servers

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -172,7 +172,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command = ""
 freenode.command_delay
-freenode.autojoin = "#archlinux,#debian,##linux,#sickrage-issues,##windows,#reddit-sysadmin,#kodi,##windows-server"
+freenode.autojoin = "#archlinux,#debian,##linux"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -184,3 +184,81 @@ freenode.default_msg_kick
 freenode.default_msg_part
 freenode.default_msg_quit
 freenode.notify
+ipt.addresses = "irc.iptorrents.com"
+ipt.proxy
+ipt.ipv6
+ipt.ssl
+ipt.ssl_cert
+ipt.ssl_priorities
+ipt.ssl_dhkey_size
+ipt.ssl_fingerprint
+ipt.ssl_verify
+ipt.password
+ipt.capabilities
+ipt.sasl_mechanism
+ipt.sasl_username
+ipt.sasl_password
+ipt.sasl_key
+ipt.sasl_timeout
+ipt.sasl_fail
+ipt.autoconnect
+ipt.autoreconnect
+ipt.autoreconnect_delay
+ipt.nicks
+ipt.nicks_alternate
+ipt.username
+ipt.realname
+ipt.local_hostname
+ipt.command
+ipt.command_delay
+ipt.autojoin
+ipt.autorejoin
+ipt.autorejoin_delay
+ipt.connection_timeout
+ipt.anti_flood_prio_high
+ipt.anti_flood_prio_low
+ipt.away_check
+ipt.away_check_max_nicks
+ipt.default_msg_kick
+ipt.default_msg_part
+ipt.default_msg_quit
+ipt.notify
+local.addresses = "192.168.1.10"
+local.proxy
+local.ipv6
+local.ssl
+local.ssl_cert
+local.ssl_priorities
+local.ssl_dhkey_size
+local.ssl_fingerprint
+local.ssl_verify
+local.password
+local.capabilities
+local.sasl_mechanism
+local.sasl_username
+local.sasl_password
+local.sasl_key
+local.sasl_timeout
+local.sasl_fail
+local.autoconnect
+local.autoreconnect
+local.autoreconnect_delay
+local.nicks
+local.nicks_alternate
+local.username
+local.realname
+local.local_hostname
+local.command
+local.command_delay
+local.autojoin
+local.autorejoin
+local.autorejoin_delay
+local.connection_timeout
+local.anti_flood_prio_high
+local.anti_flood_prio_low
+local.away_check
+local.away_check_max_nicks
+local.default_msg_kick
+local.default_msg_part
+local.default_msg_quit
+local.notify
